--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 
         </ul>
         <h2>Current Research</h2>
-    <p>PhD plnned: History of Object Oriented Programming (supervisor: Wolfgang Hagen)</p>
+    <p>PhD plnned: History of Object Oriented Programming (supervisor: <a target="_blank" href="http://www.whagen.de/ADRESSE.HTM">Wolfgang Hagen</a>)</p>
         <h2>Publications</h2>
         <ul>
     <li> Miscellany planed: <a target="_blank" href="http://www.computerarchaeologie.de/geplante-baende/">HELLO, I’M ELIZA - Zum 50. Geburtstag eines Chat-Bots </a> </li></ul>
         <h2>Education</h2>
         <ul>
-                 <li>2009-2013: Masters of Arts: Media Study (Medienwissenschaft) at Humblodt-Universotät zu Berlin, GER</li>
-             <li>2007: Semester Abroad: Humboldt State University, Californie, USA </li>
-            <li>2004-2008: Bachelor of Science: Digital Meida (Department of Computer Science at University of Applied Science, Bremen, GER</li></ul>
+        <li>2009-2013: Master of Arts in Media Study (Medienwissenschaft) at <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft">Humblodt-Universität zu Berlin</a>, GER</li>
+             <li>2007: Semester Abroad at the <a target="_blank" href="https://www.humboldt.edu/">Humboldt State University</a>, California, USA</li>
+            <li>2004-2008: Bachelor of Science: Digital Meida at the <a target="_blank" href="http://www.hs-bremen.de/internet/de/studium/stg/mi/">University of Applied Science</a>, Bremen, GER</li></ul>
             
-            <h2>Work Experience in Image- and Videoproduction</h2>
+            <h2>Work Experience in Image and Video Production</h2>
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/GGiUN_rzt0U" frameborder="0" allowfullscreen></iframe>
      <ul>
