--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <li> Miscellany planed: <a target="_blank" href="http://www.computerarchaeologie.de/geplante-baende/">HELLO, I’M ELIZA - Zum 50. Geburtstag eines Chat-Bots </a> </li></ul>
         <h2>Education</h2>
         <ul>
-        <li>2009-2013: Master of Arts in Media Study (Medienwissenschaft) at <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft">Humblodt-Universität zu Berlin</a>, GER</li>
+        <li>2009-2013: Master of Arts in Media Study (Medienwissenschaft) at the <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft">Humblodt-Universität zu Berlin</a>, GER</li>
              <li>2007: Semester Abroad at the <a target="_blank" href="https://www.humboldt.edu/">Humboldt State University</a>, California, USA</li>
             <li>2004-2008: Bachelor of Science: Digital Meida at the <a target="_blank" href="http://www.hs-bremen.de/internet/de/studium/stg/mi/">University of Applied Science</a>, Bremen, GER</li></ul>
             
