--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
         <ul>
             <img src="img/me.jpeg">
             <li>Locations: Hamburg, Lüneburg, Berlin</li>
-            <li>Research Assistant, Local Programme Manager at <a target="_blank" href="http://www.macromedia-fachhochschule.de/bachelor/medienmanagement.html">Macromedia</a> since Jan, 2015</li>
-            <li>Lecturer at the Leuphana University <a target="_blank" href="http://www.leuphana.de/institute/icam.html">Lüneburg</a> since May 2014 and in <a target="_blank" href="http://www.leuphana.de/college/studium/hauptfaecher/hf-digimed.html"> Hamburg</a> since April 2017</li>   
+            <li>Research Assistant, Local Programme Manager at <a target="_blank" href="http://www.mhmk-international.org/undergraduate-programs/ba-in-media-management.html">Macromedia University</a> since Jan, 2015</li>
+            <li>Lecturer at the Leuphana University <a target="_blank" href="http://www.leuphana.de/institute/icam.html">Lüneburg</a> since May 2014 and <a target="_blank" href="http://www.leuphana.de/college/studium/hauptfaecher/hf-digimed.html">Hamburg</a> since April 2017</li>   
             <li>  <a target="_blank" href="http://www.leuphana.de/institute/icam/lehrangebot.html">Courses in Summer 2017</a> </li>
-            <li> Seminars given: 
+            <h2> Seminars led </h2>
                 <ol>
-               <li> The Computer as a Medium: Basic Texts I & II/ Grundlagentexte zum Computer als Medium I & II(GER) </li> 
-                <li> (Hi)story of EDP (electronic data processing) / Geschichte der elektronischen Datenverarbeitung (GER) </li> 
+               <li> A Computer as a Medium: Basic Texts I & II/ Grundlagentexte zum Computer als Medium I & II(GER) </li> 
+                <li> (Hi)story of EDP (electronic data processing) / Geschichte der EDV (elektronischen Datenverarbeitung) (GER) </li> 
                 <li> Digital Media Production I (ENG) </li> 
                 <li> Audio-Visual Media / Audiovisuelle Medien (ENG) </li> 
                 <li> History and aesthetics of the moving image / Geschichte und Ästhetik des bewegten Bildes (GER) </li> 
                 <li> Scientific Methods / Wissenschaftliche Methoden (ENG/GER)</li> 
-                <li> TV Format Developement (ENG)</li> 
-                </ol></li>  
+                <li> TV Format Development (ENG)</li> 
+                </ol> 
 
         </ul>
         <h2>Current Research</h2>
-    <p>PhD plnned: History of Object Oriented Programming (supervisor: <a target="_blank" href="http://www.whagen.de/ADRESSE.HTM">Wolfgang Hagen</a>)</p>
+    <p>PhD planed: History of Object Oriented Programming (supervisor: <a target="_blank" href="http://www.whagen.de/ADRESSE.HTM">Wolfgang Hagen</a>)</p>
         <h2>Publications</h2>
         <ul>
     <li> Miscellany planed: <a target="_blank" href="http://www.computerarchaeologie.de/geplante-baende/">HELLO, I’M ELIZA - Zum 50. Geburtstag eines Chat-Bots </a> </li></ul>
@@ -46,9 +46,10 @@
              <li>2007: Semester Abroad at the <a target="_blank" href="https://www.humboldt.edu/">Humboldt State University</a>, California, USA</li>
             <li>2004-2008: Bachelor of Science: Digital Meida at the <a target="_blank" href="http://www.hs-bremen.de/internet/de/studium/stg/mi/">University of Applied Science</a>, Bremen, GER</li></ul>
             
-            <h2>Work Experience in Image and Video Production</h2>
+          
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/GGiUN_rzt0U" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GGiUN_rzt0U" frameborder="0" allowfullscreen></iframe>
+        <h2>Work Experience in Image and Video Production</h2>
      <ul>
             <li>2014: <a target="_blank" href="http://www.stapp.tv/">Stapp TV</a>, Hamburg, GER</li>
             <li>2013: Zalando <a target="_blank" href="http://www.zuumeo.com/">Zuumeo</a>, Berlin, GER</li>
