--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>Locations: Hamburg, Lüneburg, Berlin</li>
             <li>Research Assistant, Local Programme Manager at <a target="_blank" href="http://www.mhmk-international.org/undergraduate-programs/ba-in-media-management.html">Macromedia University</a> since Jan, 2015</li>
             <li>Lecturer at the Leuphana University <a target="_blank" href="http://www.leuphana.de/institute/icam.html">Lüneburg</a> since May 2014 and <a target="_blank" href="http://www.leuphana.de/college/studium/hauptfaecher/hf-digimed.html">Hamburg</a> since April 2017</li>   
-            <li>  <a target="_blank" href="http://www.leuphana.de/institute/icam/lehrangebot.html">Courses in Summer 2017</a> </li>
+            <li>  <a target="_blank" href="http://www.leuphana.de/institute/icam/lehrangebot.html">Courses in Summer 2017</a> </li></ul>
             <h2> Seminars led </h2>
                 <ol>
                <li> A Computer as a Medium: Basic Texts I & II/ Grundlagentexte zum Computer als Medium I & II(GER) </li> 
@@ -33,8 +33,6 @@
                 <li> Scientific Methods / Wissenschaftliche Methoden (ENG/GER)</li> 
                 <li> TV Format Development (ENG)</li> 
                 </ol> 
-
-        </ul>
         <h2>Current Research</h2>
     <p>PhD planed: History of Object Oriented Programming (supervisor: <a target="_blank" href="http://www.whagen.de/ADRESSE.HTM">Wolfgang Hagen</a>)</p>
         <h2>Publications</h2>
