--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <li>  <a target="_blank" href="http://www.leuphana.de/institute/icam/lehrangebot.html">Courses in Summer 2017</a> </li></ul>
             <h2> Seminars led </h2>
                 <ol>
-               <li> A Computer as a Medium: Basic Texts I & II/ Grundlagentexte zum Computer als Medium I & II(GER) </li> 
+               <li> A Computer as a Medium: Basic Texts / Grundlagentexte zum Computer als Medium (GER) </li> 
                 <li> (Hi)story of EDP (electronic data processing) / Geschichte der EDV (elektronischen Datenverarbeitung) (GER) </li> 
                 <li> Digital Media Production I (ENG) </li> 
                 <li> Audio-Visual Media / Audiovisuelle Medien (ENG) </li> 
-                <li> History and aesthetics of the moving image / Geschichte und Ästhetik des bewegten Bildes (GER) </li> 
+                <li> History and aesthetics of a moving image / Geschichte und Ästhetik des bewegten Bildes (GER) </li> 
                 <li> Scientific Methods / Wissenschaftliche Methoden (ENG/GER)</li> 
                 <li> TV Format Development (ENG)</li> 
                 </ol> 
