--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Introducing Marianna</title>
+        <title>Marianna Baranovska</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,15 +15,18 @@
     <div id="main">
 
         <h1>Marianna Baranovskaa</h1>
+        <h3></h3>
         <p>MA Medienwissenschaft (Media Studies)</p>
         <p><a href="mailto:marianna.baranovskaa@gmx.de">marianna.baranovskaa@gmx.de</a></p>
+         <h3></h3>
         <ul>
             <img src="img/me.jpeg">
             <li>Locations: Hamburg, Lüneburg, Berlin</li>
-            <li>Research Assistant, Local Programme Manager at <a target="_blank" href="http://www.mhmk-international.org/undergraduate-programs/ba-in-media-management.html">Macromedia University</a> since Jan, 2015</li>
-            <li>Lecturer at the Leuphana University <a target="_blank" href="http://www.leuphana.de/institute/icam.html">Lüneburg</a> since May 2014 and <a target="_blank" href="http://www.leuphana.de/college/studium/hauptfaecher/hf-digimed.html">Hamburg</a> since April 2017</li>   
-            <li>  <a target="_blank" href="http://www.leuphana.de/institute/icam/lehrangebot.html">Courses in Summer 2017</a> </li></ul>
-            <h2> Seminars led </h2>
+            <li>Research Assistant, Local Programme Manager at <a target="_blank" href="http://www.mhmk-international.org/undergraduate-programs/ba-in-media-management.html">Macromedia University</a> since 2015</li>
+            <li>Lecturer at the Leuphana University at ICAM </li>
+            <li>Minor Digitale Medien <a target="_blank" href="http://www.leuphana.de/en/institutes/icam.html">Lüneburg</a> since 2014 and Major Digital Media <a target="_blank" href="http://www.leuphana.de/college/studium/hauptfaecher/hf-digimed.html">Hamburg</a> since 2017 </li>
+            </ul>
+            <h1> Seminars </h1>
                 <ol>
                <li> A Computer as a Medium: Basic Texts / Grundlagentexte zum Computer als Medium (GER) </li> 
                 <li> (Hi)story of EDP (electronic data processing) / Geschichte der EDV (elektronischen Datenverarbeitung) (GER) </li> 
@@ -33,30 +36,50 @@
                 <li> Scientific Methods / Wissenschaftliche Methoden (ENG/GER)</li> 
                 <li> TV Format Development (ENG)</li> 
                 </ol> 
-        <h2>Current Research</h2>
-    <p>PhD planed: History of Object Oriented Programming (supervisor: <a target="_blank" href="http://www.whagen.de/ADRESSE.HTM">Wolfgang Hagen</a>)</p>
-        <h2>Publications</h2>
+            <ul>
+                <li> 
+                <img src="img/eliza.png">
+                <a target="_blank" href="http://www.leuphana.de/en/institutes/icam/teaching.html"> Courses in Summer 2017 </a> </li> </ul>
+                <h3></h3>
+        <h1>Current Research</h1>
+    <p>PhD on the History of Programming Languages in progress</p>
+    <h3></h3>
+        <h1>Publications</h1>
         <ul>
     <li> Miscellany planed: <a target="_blank" href="http://www.computerarchaeologie.de/geplante-baende/">HELLO, I’M ELIZA - Zum 50. Geburtstag eines Chat-Bots </a> </li></ul>
-        <h2>Education</h2>
+        <h1>Education</h1>
         <ul>
-        <li>2009-2013: Master of Arts in Media Study (Medienwissenschaft) at the <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft">Humblodt-Universität zu Berlin</a>, GER</li>
-             <li>2007: Semester Abroad at the <a target="_blank" href="https://www.humboldt.edu/">Humboldt State University</a>, California, USA</li>
-            <li>2004-2008: Bachelor of Science: Digital Meida at the <a target="_blank" href="http://www.hs-bremen.de/internet/de/studium/stg/mi/">University of Applied Science</a>, Bremen, GER</li></ul>
+        <li>2009-2013: <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft/medientheorien/kolloquium1/marianna-baranovskaa-entwicklung-der-programmiersprachen-unter-dem-einfluss-der-natuerlichen-sprache">Humblodt-Universität zu Berlin</a>, GER</li>
+        <li>Master of Arts in Media Study (Medienwissenschaft)</li>
+        <h3></h3>
+             <li>2006-2007: <a target="_blank" href="https://www.humboldt.edu/programs/computer-science">Humboldt State University</a>, California, USA</li>
+             <li>Classes in Coputer Science, Computer Information Systems, Journalism</li>
+             <h3></h3>
+            <li>2004-2008: <a target="_blank" href="http://www.hs-bremen.de/internet/de/studium/stg/mi/">University of Applied Science</a>, Bremen, GER</li>
+            <li>Bachelor of Science: Digital Meida</li></ul>
             
           
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/GGiUN_rzt0U" frameborder="0" allowfullscreen></iframe>
-        <h2>Work Experience in Image and Video Production</h2>
+        <h1>Work Experience: Image / Video Production</h1>
      <ul>
+            <h3></h3>
             <li>2014: <a target="_blank" href="http://www.stapp.tv/">Stapp TV</a>, Hamburg, GER</li>
+                <h3></h3>
             <li>2013: Zalando <a target="_blank" href="http://www.zuumeo.com/">Zuumeo</a>, Berlin, GER</li>
+                <h3></h3>
             <li>2012: Zalando <a target="_blank" href="https://corporate.zalando.de/de/mybrands-zalando-eproductions-mit-neuem-eigentuemer">Mybrands</a>, Berlin, GER</li>
+                <h3></h3>
              <li>2011: Zalando <a target="_blank" href="https://corporate.zalando.com/en">Zalando Think Tank</a>, Berlin, GER</li>
+                 <h3></h3>
              <li>2010: <a target="_blank" href="http://www.gracenote.com/">Gracenote</a>, Berlin, GER</li>
+                 <h3></h3>
              <li>2009: <a target="_blank" href="http://www.defyagency.com/">Defy Agency</a>, Los Angeles, CA, USA</li>
-             <li>2008: <a target="_blank" href="https://www.facebook.com/Pine-Tree-Market-153138091403848/">Pine Tree Market</a>, Northeast Harbor, ME, USA</li>
+                 <h3></h3>
+             <li>2008: <a target="_blank" href="https://www.facebook.com/Pine-Tree-Market-153138091403848/">Pine Tree</a>, Northeast Harbor, ME, USA</li>
+                 <h3></h3>
              <li>2009: <a target="_blank" href="http://www.radioweser.tv/?L=1&">Weser TV</a>, Bremen, GER</li>
+                 <h3></h3>
             <li>2009: <a target="_blank" href="http://www.tidenet.de/">Tide TV</a>, Hamburg, GER</li>
 </div>
     </body>
