--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
     <div id="main">
-        <h1>Marianna Baranovskaa</h1>
+        <h1>Marianna Baranovska-Bölter</h1>
         <img src="img/me.jpeg" height="315">
         <h3></h3>
 
