--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ The essays of the miscellany are partly the proceedings of the conference, which
              <h3></h3>
             <li>2004-2008: <a target="_blank" href="http://www.hs-bremen.de/internet/de/studium/stg/mi/">University of Applied Science</a>, Bremen, GER</li>
             <li>Bachelor of Science: Digital Meida (BS Digitale Medien)</li></ul>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=GGiUN_rzt0U" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/GGiUN_rzt0U" frameborder="0" allowfullscreen></iframe>
         <h3></h3>
         <h1>Experience in Image & Video Production</h1>
      <ul>
