--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ The essays of the miscellany are partly the proceedings of the conference, which
     <h3></h3>
   
         <h1>Education</h1>
-        <iframe width="1498" height="711" src="https://www.youtube.com/embed/GGiUN_rzt0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vG10wpN2nM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <ul>
         <li>2009-2013: <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft/medientheorien/kolloquium1/marianna-baranovskaa-entwicklung-der-programmiersprachen-unter-dem-einfluss-der-natuerlichen-sprache">Humblodt-Universität zu Berlin</a>, GER</li>
         <li>Master of Arts in Media Study (MA Medienwissenschaft)</li>
