--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Marianna Baranovska</title>
+        <title>Marianna Baranovska-Bölter</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -134,7 +134,7 @@ The essays of the miscellany are partly the proceedings of the conference, which
     <h3></h3>
   
         <h1>Education</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/vG10wpN2nM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/657375001?h=74325cafa7&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="reelIPhone"></iframe>
         <ul>
         <li>2009-2013: <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft/medientheorien/kolloquium1/marianna-baranovskaa-entwicklung-der-programmiersprachen-unter-dem-einfluss-der-natuerlichen-sprache">Humblodt-Universität zu Berlin</a>, GER</li>
         <li>Master of Arts in Media Study (MA Medienwissenschaft)</li>
