--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
         <h3></h3>
 
         <p>MA Medienwissenschaft (Media Studies)</p>
-        <p><a href="mailto:marianna.baranovskaa@gmx.de">marianna.baranovskaa@gmx.de</a></p>
+        <p><a href="mailto:marianna.baranovskaa@gmx.de">Mail</a></p>
          <h3></h3>
         <ul>
             <li>Located: Hamburg, Lüneburg, Berlin</li>
             <h3></h3>
-            <li>Research Associate at <a target="_blank" href="http://www.mhmk-international.org/undergraduate-programs/ba-in-media-management.html">Macromedia University</a> since 2015</li>
+            <li>Media Literacy Promoter at <a target="_blank" href="https://www.leuphana.de/services/miz/ueber-das-miz/organisation/informationsdienste/informationskompetenz.html">Leuphana University Lüneburg</a> 2021-2024 </li>
+            <li> Video Production Support for <a target="_blank" href="https://www.leuphana.de/universitaet/lehre/projekte/digital-transformation-lab-for-teaching-and-learning.html">Leuphana University Lüneburg</a> 2021-2024 </li>
+            <li>Research Associate at <a target="_blank" href="https://www.macromedia-fachhochschule.de/de/hochschule/forschung-publikationen/forschungsprojekte/">Macromedia University</a> 2015-2022 </li>
+            <li>Lecturer at the Macromedia University, Hamburg, 2015-2022 </li>
             <li>Lecturer at the Humboldt University to Berlin, 2018 </li>
             <li>Lecturer at the Leuphana University (ICAM), 2014 - 2018 </li>
             <li>Minor Digitale Medien <a target="_blank" href="http://www.leuphana.de/en/institutes/icam.html">Lüneburg</a> and Major Digital Media <a target="_blank" href="http://www.leuphana.de/college/studium/hauptfaecher/hf-digimed.html">Hamburg</a></li>
