--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ The essays of the miscellany are partly the proceedings of the conference, which
          <h3></h3>
         <h1>Conferences & Talks</h1>
         <ol>
-        <li>15-14 of October, 2021, Bremen, Germany - <a target="_blank" href="https://scoreforschung.com/abschlusstagung-score/"> Closing Conference of the Project SCoRe</a> – Video based Learning via Sustainability Research "Funktionen und Perspektiven der Videonutzung im SCoRe-Projekt
+        <li>15-14th of October, 2021, Bremen, Germany - <a target="_blank" href="https://scoreforschung.com/abschlusstagung-score/"> Closing Conference of the Project SCoRe</a> – Video based Learning via Sustainability Research "Funktionen und Perspektiven der Videonutzung im SCoRe-Projekt
         </li> 
         <li>5th of December, 2019, Bremen, Germany - Guest Talk at the University of Bremen, Chatbot Seminar: Eliza - die Mutter aller Chatbots
         </li> 
         <li>
-            16-19 September 2019, Berlin, Germany - <a target="_blank" href="http://www.delfi2019.de/"> GMW-Tagung 2019 </a>
+            16-19th September 2019, Berlin, Germany - <a target="_blank" href="http://www.delfi2019.de/"> GMW-Tagung 2019 </a>
             "LectureCast als 360° - Video. Welchen Einfluss haben Immersion und Präsenzerleben auf die Lernleistung?", "Nutzung von 360°-Video im Kontext forschenden Lernens" - Workshop by A. Hebbel-Seeger & M. Baranovskaa
             <a target="_blank" href="http://www.delfi2019.de/pdf/DELFI-GMW-2019_Tagungsprogramm_DINA4_faltbar__v1.4__20190917.pdf"> Schedule </a> 
         </li>
@@ -103,8 +103,10 @@ The essays of the miscellany are partly the proceedings of the conference, which
         </li>
          </li></ol>
         <h3></h3>
-            <h1> Seminars 2014 - 2018 </h1>
+            <h1> Seminars and Training 2014 - 2021 </h1>
                 <ol>
+                <li> Urbanes Grün mit 360°-Video auf SCoRe-Demo / Macromedia University, Hamburg (GER) </li>
+                <li> Urbanes Grün auf SCoRe-Docs / VAN Universität Bremen (GER) </li>
                 <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft/Studium/MA%20Medienwissenschaft%2C%20Media%20Studies_"> Humboldt University, Berlin, MA:</a>
                 <li>On the Track of History of the Object Orientation </li>
                 <h3></h3>
