--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ The essays of the miscellany are partly the proceedings of the conference, which
         </li>
          </li></ol>
         <h3></h3>
-            <h1> Seminars and Training 2014 - 2021 </h1>
+            <h1>Teaching and Training 2014 - 2021 </h1>
                 <ol>
                 <li> Urbanes Grün mit 360°-Video auf SCoRe-Demo / Macromedia University, Hamburg (GER) </li>
                 <li> Urbanes Grün auf SCoRe-Docs / VAN Universität Bremen (GER) </li>
