--- a/index.html
+++ b/index.html
@@ -107,9 +107,17 @@ The essays of the miscellany are partly the proceedings of the conference, which
         <h3></h3>
             <h1>Teaching and Training 2014 - 2021 </h1>
                 <ol>
-                <li> Urbanes Grün mit 360°-Video auf SCoRe-Demo / Macromedia University, Hamburg (GER) </li>
-                <li> Urbanes Grün auf SCoRe-Docs / VAN Universität Bremen (GER) </li>
+                <a target="_blank" href="https://va-bne.de/index.php/de/"> University of Bremen, BA:</a>
+                <li> Urbanes Grün mit SCoRe-Docs / VAN Universität Bremen (GER) </li>
         <h3></h3>
+                    <a target="_blank" href="https://www.macromedia-fachhochschule.de/de/bachelor/cluster-medien-journalismus/"> Macromedia University, Hamburg, BA:</a>
+                <li> 2021: Urbanes Grün mit 360°-Video auf SCoRe-Demo (GER) </li>
+                <li> 2015-2018: Audio-/Video Media-Production (ENG/GER)</li>
+                <li> 2015-2018: Empirical Social Reserach (ENG) </li>
+                <li> 2015-2018: Scientific Writing (ENG/GER) </li>
+                <li> 2015-2016: TV-Format Development (ENG) </li>
+        <h3></h3>
+               
                 <a target="_blank" href="https://www.musikundmedien.hu-berlin.de/de/medienwissenschaft/Studium/MA%20Medienwissenschaft%2C%20Media%20Studies_"> Humboldt University, Berlin, MA:</a>
                 <li>On the Track of History of the Object Orientation </li>
                 <h3></h3>
