--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@ The essays of the miscellany are partly the proceedings of the conference, which
                 <li> Scientific Methods / Wissenschaftliche Methoden (ENG/GER)</li>  
                 </ol> 
                 <h3></h3>
-  <iframe src="https://player.vimeo.com/video/106385374" width="560" height="315" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <h1>Porjects & Events </h1>
         <h3></h3>
         <p><a target="_blank" href="https://scoreforschung.com/ueber/"> 2018 - 2022: Students' Crowd Research - SCoRe </a><p>
@@ -148,6 +147,7 @@ The essays of the miscellany are partly the proceedings of the conference, which
         <p><a target="_blank" href="http://www.360total.de/"></a>
         The joint project SCoRe (Student Crowd Research), funded by the German Federal Ministry of Education and Research (BMBF) is carried out by the Universities of Bremen, Hamburg, Kiel and the Ghostthinker Ltd., as well as the <a target="_blank" href="https://www.macromedia-fachhochschule.de/de/hochschule/forschung-publikationen/forschungsprojekte/"> Macromedia University, Hamburg</a>, Prof. A. Hebbel-Seeger, A. Kopischke & M. Baranovskaa in particular, where they expand the video based learning and research perspective by analyzing the contribution made by the innovative video formats, including 360° video, to the research-based learning within a crowd. This research is carried out between October, 2018 and March, 2022.
         </p>
+         <iframe src="https://player.vimeo.com/video/106385374" width="560" height="315" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <h3></h3>
     <p><a target="_blank" href="http://www.jamtoday.eu/"> 2014 - 2017: EU-Project JamToday</a></p>
     <h3></h3>
@@ -158,9 +158,7 @@ The essays of the miscellany are partly the proceedings of the conference, which
     <li> As part of this JamToday EU-Project, the "IndieGameleon Festival 2015" was organized in Hamburg.</li>
     </ul>
 
-    <p><a target="_blank" href="http://www.indie-gameleon.org//">IndieGameleon</a> </p>
-    <h3></h3>
-    <p>...is a festival organized by Indietopia/NL, Slashgames/GER and Macromedia University/GER for indie game developers, game design students and indie game enthusiast.</p> 
+    <p><a target="_blank" href="http://www.indie-gameleon.org//">IndieGameleon</a> is a festival organized by Indietopia/NL, Slashgames/GER and Macromedia University/GER for indie game developers, game design students and indie game enthusiast.</p> 
     <p>Consisting of:</p>
     <h3></h3>
 
